# aoai-realtime-audio-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  realtime-openapi3.yml
.devcontainer/: devcontainer.json  init.sh
dotnet/: .gitignore  README.md
dotnet/samples/: .gitignore  Azure.AI.OpenAI.2.1.0-alpha-private-realtime-1727767373.nupkg  OpenAI.2.1.0-alpha-private-realtime-1727767373.nupkg  README.md  download-nupkg.ps1  download-nupkg.sh
dotnet/samples/console-from-file/: Program.cs  README.md  RealtimeConsoleApp.csproj  nuget.config
dotnet/samples/console-from-mic/: MicrophoneAudioStream.cs  Program.cs  README.md  RealtimeInteractiveConsole.csproj  SpeakerOutput.cs
flutter/flutter-aoai-realtime-connection/: README.md  pubspec.yaml
java/console/: build.gradle.kts  settings.gradle.kts
javascript/samples/: download-pkg.ps1  download-pkg.sh  readme.md
javascript/standalone/: package-lock.json  package.json  rollup.config.mjs  vitest.workspace.mts
python/: .gitignore  pyproject.toml
python/rtclient/: __init__.py  client_test.py  defaults.py  low_level_client.py  models.py
python/rtclient/util/: id_generator.py  id_generator_test.py  message_queue.py  message_queue_test.py  model_helpers.py  model_helpers_test.py  user_agent.py  user_agent_test.py
python/samples/: README.md  client_sample.py  client_sample_no_vad.py  development.env  download-wheel.ps1  download-wheel.sh  low_level_sample.py  requirements.txt  rtclient-0.4.0-py3-none-any.whl  sample_text_input.py
python/samples/input/: arc-easy-q237-tts.flac
samples/backend/: README.md
samples/middle-tier/: README.md
samples/middle-tier/python-fastapi/: README.md  pyproject.toml
samples/middle-tier/python-fastapi/rt-middle-tier/: main.py
(+156 files in other folders)
